Bug fix on eval overflow
Bug fix removing resizing of table container for scaling to full-data

--- a/styles/_application.scss
+++ b/styles/_application.scss
@@ -9,6 +9,7 @@
   .controller {
     width: 200px;
     height: 100%;
+    padding: 4px 0px;
     border-right: 2px solid black;
     overflow: auto;
     resize: horizontal;
@@ -17,16 +18,27 @@
       fieldset {
         display: flex;
         flex-direction: column;
+        padding: 0px;
+        border-right: 0px;
+        border-left: 0px;
 
+        legend {
+          margin-left: 4px;
+        }
+        
         button {
           margin: 2px 4px;
           padding: 2px 4px;
           text-align: left;
           cursor: pointer;
         }
-
+        
         .lineups {
           padding: 4px 0px;
+          
+          .lineup-heading {
+            margin-left: 4px;
+          }
 
           .lineup-row {
             padding: 2px 4px;
@@ -36,6 +48,11 @@
 
             &.selected {
               background-color: lightgreen;
+            }
+          }
+          .apply-lineups-btn {
+            button {
+              margin: 4px 2px 2px;
             }
           }
         }
@@ -51,7 +68,7 @@
 
     .tableContainer {
       height: 65vh;
-      resize: vertical;
+      // resize: vertical;
       overflow-y: scroll;
 
       table {
@@ -125,7 +142,7 @@
 
 .evaluation {
   width: auto;
-  height: auto;
+  height: 29vh;
   padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
